--- a/src/translations/es/language.json
+++ b/src/translations/es/language.json
@@ -8,14 +8,14 @@
   },
   "homePage": {
     "hi": "Hola! Soy",
-    "title": "Desarrollador Front End.",
+    "title": "Analista Programador COBOL.",
     "titleContact": "Envíame un correo",
     "titleCV": "Descarga mi CV"
   },
   "aboutPage": {
     "about": "Sobre mi",
-    "title": "Mi nombre es Néstor Acerbo. Soy argentino e hincha de River Plate ❤",
-    "text": " Soy desarrollador de Front End con experiencia en crear sitios y aplicaciones web en JavaScript y React. Mi principal objetivo es crear atractivas, accesibles y eficientes interfaces para las personas. Tengo mucha confianza en que puedo solucionar cualquier problema y ser una gran adición a cualquier equipo de trabajo."
+    "title": "Mi nombre es Néstor Acerbo. Soy de Argentina e hincha de River Plate 🤍❤️🤍",
+    "text": "Soy Analista Programador especializado en COBOL, con sólida experiencia en el sector financiero, habiendo trabajado en instituciones como AGIP y BBVA. Me apasiona la tecnología y estoy comprometido con la mejora continua y la especialización en mi área, siempre en busca de nuevos desafíos que me permitan crecer profesional y personalmente."
   },
   "skillsPage": {
     "skills": "Habilidades",
