--- a/src/translations/en/language.json
+++ b/src/translations/en/language.json
@@ -8,14 +8,14 @@
   },
   "homePage": {
     "hi": "Hi! I'm",
-    "title": "Front-end Developer.",
+    "title": "COBOL Analyst Programmer.",
     "titleContact": "Send me an email",
     "titleCV": "Download my resume"
   },
   "aboutPage": {
     "about": "About me",
     "title": " My name is Néstor Acerbo. I'm from Argentina and a River Plate fan ❤.",
-    "text": " I'm a front end developer with experience creating sites and web apps in JavaScript and React. My main goal is to create gorgeous, accessible and efficient interfaces for people to engage with. I'm confident that i can be a great addition to a team."
+    "text": " I am a COBOL Analyst Programmer with solid experience in the financial sector, having worked with institutions such as AGIP and BBVA. I am passionate about technology and committed to continuous improvement and specialization in my field, always seeking new challenges that allow me to grow both professionally and personally."
   },
   "skillsPage": {
     "skills": "Skills",
